--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "web-recorder",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@liushanshan666/web-recorder",
+  "version": "0.1.6",
+  "private": false,
+  "main": "./dist/web-recorder.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*json",
+    "*js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-bundle": "vue-cli-service build --target lib --name web-recorder ./src/components/index.js",
+    "webpack": "webpack --version"
   },
   "dependencies": {
+    "ali-oss": "^6.17.1",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.8",
+    "rrweb": "^1.1.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
@@ -19,7 +32,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-cli": "^4.10.0"
   },
   "eslintConfig": {
     "root": true,
