feat:修改下载文件名

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@liushanshan666/web-recorder",
-  "version": "0.1.6",
+  "name": "@test/web-recorder",
+  "version": "0.1.2",
   "private": false,
-  "main": "./dist/web-recorder.common.js",
+  "main": "./src/components/index.js",
   "files": [
     "dist/*",
     "src/*",
