--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@test/web-recorder",
-  "version": "0.1.7",
+  "name": "@jdl/web-recorder",
+  "version": "0.1.14",
   "private": false,
   "main": "./src/components/index.js",
   "files": [
@@ -21,9 +21,12 @@
     "ali-oss": "^6.17.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.8",
+    "lodash": "^4.17.21",
     "rrweb": "^1.1.3",
     "rrweb-player": "^0.7.14",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-draggable-resizable": "^2.3.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
