--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jdl/web-recorder",
-  "version": "0.1.14",
+  "name": "@test/web-recorder",
+  "version": "0.2",
   "private": false,
   "main": "./src/components/index.js",
   "files": [
@@ -18,6 +18,7 @@
     "webpack": "webpack --version"
   },
   "dependencies": {
+    "@lui/lui-ui": "^2.15.6",
     "ali-oss": "^6.17.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.8",
