--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@test/web-recorder",
-  "version": "0.2",
+  "name": "@jdl/web-recorder",
+  "version": "0.1.15",
   "private": false,
   "main": "./src/components/index.js",
   "files": [
